# CHYing-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GEMINI.md  QUICKSTART.md  QuicklyStart.md  README-V1.md  README.md  Wiz Bug Bounty Masterclass.md  langgraph.json  main.py  main_multi_agent.py  main_multi_agent_concurrent.py  main_with_hint.py  mcp.json.example  null-zone.md  pyproject.toml  pyrightconfig.json  run_benchmark.py  run_htb_ctf.py  run_tencent_ctf.py  run_tencent_ctf_delayed.sh  start-web.sh  阿里云 CTF 2026 失败复盘：当我试图用复杂架构"驾驭"承影 Agent.md
agent-work/: .mcp.json  CLAUDE.md
benchmark/: glm-5-state.json
benchmark-results/: report_20260403_222458.json  state.json
chying_agent/: challenge_solver.py  common.py  config.py  graph.py  langmem_memory.py  model.py  observability.py  preflight.py  prompts_book.py  retry_strategy.py  scheduler.py  state.py  task_launcher.py  task_manager.py  writeup_generator.py
chying_agent/agents/: __init__.py  advisor.py  browser_agent.py  c2_agent.py  docker_agent.py  executor_agent.py  flag_submitter_agent.py  main_agent.py  poc_agent.py  reverse_agent.py  scene_agent.py  scraper_agent.py  tool_registry.py  writeup_agent.py
chying_agent/brain_agent/: __init__.py  claude_advisor.py  progress_compiler.py  prompt_compiler.py  prompt_compiler_meta.py  prompts.py  retry_handoff_compiler.py
chying_agent/claude_sdk/: __init__.py  base.py  cookie_cache.py  file_guards.py  hooks.py  mcp_tools.py  reflection.py  schemas.py  session_parser.py  session_utils.py  token_tracking.py  web_terminal.py  (+1 more)
claude-sdk-docs/: claude-sdk-python.md  structured-outputs.md
docker/: Dockerfile  chrome-policy.json  docker-compose.yml  entrypoint.sh
docs/: chying-passive-scanner-deployment.md
images/: Mermaid 流程图代码.md
knowledge/: CLAUDE.md  compiled-prancing-beacon.md  index.md  log.md
null-zone/: workflow-demo.html
scripts/: import_awesome_poc.py  import_ghsa.py  import_hacktricks.py  run_benchmark.sh
sentinel_agent/: challenge_solver.py  common.py  config.py  graph.py  graph_refactored.py  hint_strategy.py  langmem_memory.py  model.py  multi_agent_graph.py  prompts.py  prompts_book.py  retry_strategy.py  scheduler.py  state.py  task_launcher.py  task_manager.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
(+3276 files in other folders)
