[project]
name = "chying-agent"
version = "0.2.0"
description = "Sentinel Agent - AI-Powered Security Research Tool (Refactored)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "microsandbox>=0.1.5",
    "langchain>=1.0.2",
    "langchain-deepseek>=1.0.0",
    "langfuse>=3.8.1",
    "langgraph>=1.0.1",
    "langgraph-checkpoint-sqlite>=3.0.0", 
    "langmem",
    "python-dotenv>=1.2.1",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
